the_project/manifests/nats.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: project
spec:
  ports:
  - port: 4222
    name: client
  - port: 8222
    name: monitor
  selector:
    app: nats
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:latest
        ports:
        - containerPort: 4222
        - containerPort: 8222
